--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,6 +1,6 @@
-# from this repo
-    pip3 install .
+# from the virtual environment
     pip3 install -r requirements.txt
+    pip3 install dcbase
 
 
 
